Add write letters function not working in 100%

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         </div>
         <div class="main__button">Nowa Gra</div>
     </div>
+
+    <div>
+        <span class="text"></span><span class="cursor">|</span>
+       </div>
     <script src="script.js"></script>
 </body>
 
