end preload game page

--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
         <div class="main__button">Nowa Gra</div>
     </div>
 
-    <div>
-        <span class="text"></span><span class="cursor">|</span>
+    <div class="text">
+        <span class="text__text"></span><span class="text__cursor">|</span>
+       </div>
+
+       <div class="timer">
+        <span class="timer__span">Gra</span>
+        <span class="timer__span">Rozpocznie </span>
+        <span class="timer__span">się</span>
+        <span class="timer__span">za:</span>
+        <span class="timer__counting">3</span>
        </div>
     <script src="script.js"></script>
 </body>
