--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <script src="https://kit.fontawesome.com/bd7ab137b0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,6 +31,11 @@
         <span class="timer__span">za:</span>
         <span class="timer__counting">3</span>
        </div>
+
+       <div class="skip">
+        <span class="skip__span">skip<i class="fa-solid fa-arrow-right"></i></span>
+       </div>
+       <div class="statistics"></div>
     <script src="script.js"></script>
 </body>
 
