--- a/index.html
+++ b/index.html
@@ -32,10 +32,32 @@
         <span class="timer__counting">3</span>
        </div>
 
+       
        <div class="skip">
         <span class="skip__span">skip<i class="fa-solid fa-arrow-right"></i></span>
        </div>
-       <div class="statistics"></div>
+
+
+       <div class="game">
+       <div class="game__statistics">
+        <div class="statistics__life-points statistic">
+            <span class="life-points__name">Punkty życia</span>
+            <span class="life-points__number">10</span>
+        </div>
+        <div class="statistics__level statistic">
+            <span class="level__name">Poziom</span>
+            <span class="level__number">1</span>
+        </div>
+        <div class="statistics__game-points statistic">
+            <span class="game-points__name">Punkty</span>
+            <span class="game-points__number">0</span>
+
+        </div>
+       </div>
+       <!-- <div class="gamePicture"></div> -->
+
+
+    </div>
     <script src="script.js"></script>
 </body>
 
