add getting points and heading appear

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
 
         </div>
        </div>
-       <!-- <div class="gamePicture"></div> -->
+       
+       <div class="gamePlace">
+       <!-- <div class="gamePicture"><img src="janglowa.png" alt="Kornel Migdałek"></div> -->
+       <div class="gamePicture"></div>
+    </div>
+    
 
 
     </div>
