add working game

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="statistics__level statistic">
             <span class="level__name">Poziom</span>
-            <span class="level__number">1</span>
+            <span class="level__number">KLERYK</span>
         </div>
         <div class="statistics__game-points statistic">
             <span class="game-points__name">Punkty</span>
@@ -63,10 +63,10 @@
 
     </div>
 
-    <!-- <div class="lose">
-        <div class="lose__Text"></div>
-        <div class="lose__button"></div>
-    </div> -->
+  <div class="level-info">
+    <span class="level-info__span levelspan">Poziom</span>
+    <span class="level-info__level levelspan"></span>
+  </div>
   
     <script src="script.js"></script>
 </body>
