add version with music to test

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+   
+    
     <div class="main">
         <div class="main__title">
             <span class="title__title1 title">Uderz</span>
@@ -67,7 +69,15 @@
     <span class="level-info__span levelspan">Poziom</span>
     <span class="level-info__level levelspan"></span>
   </div>
-  
+  <!-- <div class="lose">
+    <div class="lose__Text">PRZEGRAŁEŚ</div>
+    <div class="lose__button">NOWA GRA</div>
+</div> -->
+<audio id='mainMusic' src="MainMusic1.mp3"></audio>
+<audio id='mainMusic2' src="MainMusic2.mp3"></audio>
+<audio id='loseMusic' src="loseMusic.mp3"></audio>
+<audio id='hitSound' src="hitSound.mp3"></audio>
+<audio id='hitSound2' src="hitSound2.mp3"></audio>
     <script src="script.js"></script>
 </body>
 
